<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">书法＋</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="place">地点</string>
    <string name="content">内容</string>
    <string name="sale">优惠</string>
    <string name="add_friends">添加好友</string>
    <string name="confirm_activity">发起活动</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="prompt">提示</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">连接不到服务器，请稍后重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">S</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="text_ack_msg">已读</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="select_activity_members">选择聚会好友</string>
    <string name="application_crashed">抱歉，应用崩溃了，通过邮件发送崩溃日志到服务器，仅会占用少量流量^_^</string><string name="send_crash_report"></string>
    <string name="select_party_content">选择聚会内容</string>
    <string name="select_party_member">邀请聚会同伴</string>
    <string name="cancel_activity">取消</string>
    <string name="custom_activity">自定义</string>
    <string name="location">地点</string>
    <string name="search">搜索</string>
    <string name="writeContent">编辑聚会内容</string>
    <string name="select_business_room">选择聚会地点</string>
    <string name="select_time">选择聚会时间</string>
    <string name="select_location">选择聚会地点</string>
    <string name="title">主题</string>
    <string name="contentDescription">文字说明</string>
    <string name="paymentType">消费方式</string>
    <string name="pay_me">我请客</string>
    <string name="pay_aa">AA吧</string>
    <string name="pay_other">想被请</string>
    <string name="introduction">简介</string>
    <string name="payment">订单支付</string>
    <string name="confirm_payment">确认支付</string>
    <string name="activity_detail">活动详情</string>
    <string name="activity_name_sample">青年餐厅吃饭</string>
    <string name="activity_content">活动内容</string>
    <string name="activity_time">活动时间</string>
    <string name="payment_sum">消费金额</string>
    <string name="enroll_users">已报名用户</string>
    <string name="enroll">报名</string>
    <string name="invite_message">%1$s邀请你加入“%2$s”</string>
    <string name="accept_invite_message">%1$s接受了你的邀请</string>
    <string name="refuse_invite_message">%1$s拒绝了你的邀请</string>    
    <string name="apply_message">%1$s申请加入“%2$s”</string>
    <string name="accept_apply_message">%1$s接受了你的申请</string>    
    <string name="refuse_apply_message">%1$s拒绝了你的申请</string>    
	<string name="finish_activity_message">活动“%1$s”已经完成</string>
    <string name="doing_activity">正在进行的活动</string>    
    <string name="finish_activity">已经完成的活动</string>    
    <string name="none_intro_content">未填写简介</string>    
    <string name="post_comment_message">“%1$s”评论了您的活动:%2$s</string>     
    <string name="reply_comment_message">“%1$s”回复了您的评论:%2$s</string>
    
    <string name="xiaohui_footer_text">正在加载...</string>
    <string name="xiaohui_footer_text_loafail">加载失败</string>
    <string name="fanhui">返回</string>
    <string name="fabu">发布活动</string>
    <string name="zhuti">主题</string>
    <string name="duixiang">约会对象</string>
    <string name="nv">女</string>
    <string name="nan">男</string>
    <string name="buxian">不限</string>
    <string name="daiguimi">对方可携带一名闺蜜</string>
    <string name="avatar">头像</string>
    <string name="gender">性别</string>
    <string name="gender_value"/>
    <string name="male">男</string>
    <string name="nickname">昵称/斋号</string>
    <string name="user_intro">介绍</string>
    <string name="user_title">头衔/职称</string>
    <string name="hobbies">爱好</string>
    <string name="forte">专长</string>
    <string name="region">地区</string>
    <string name="female">女</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="account_settings">用户设置</string>
    <string name="album">专辑</string>
    <string name="work">作品</string>
    <string name="likes">赞过</string>
    <string name="subscribes">收藏</string>
    <string name="following">关注</string>
    <string name="followers">粉丝</string>
    <string name="base_info">基本信息</string>
    <string name="ext_info">扩展信息</string>
    <string name="editphone">编辑您的手机号</string>
    <string name="editgender">编辑您的性别</string>
    <string name="editemail">编辑您的邮箱</string>
    <string name="choosephoto">请选择照片来源</string>
    <string name="editpseudonym">编辑您的斋号</string>
    <string name="editintro">编辑您的自我介绍</string>
    <string name="edithobby">编辑您的爱好</string>
    <string name="editforte">编辑您的专长</string>
    <string name="editregion">编辑您的地区</string>
    <string name="post_work">发布</string>
    <string name="edit_description">编辑描述</string>
    <string name="pick_album">选择一个专辑</string>
    <string name="create_album">创建一个专辑</string>
    <string name="all_albums">全部专辑</string>
    <string name="create">创建</string>
    <string name="default_album">默认专辑</string>
    <string name="sure_exit">您是否要退出应用？</string>

    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_loading">Loading</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="submit">发送</string>
    <string name="input_comment">输入评论</string>

    <string name="coolyou_recommend">点赞</string>
    <string name="coolyou_post_collection">收藏</string>
    <string name="coolyou_post_comment">评论</string>
    <string name="rotate">旋转</string>
    <string name="works_uploading">作品发布中......</string>
    <string name="works_upload_success">作品发布成功</string>
    <string name="works_upload_failed">作品发布失败</string>
    <string name="picture_upload_failed">图片发布失败</string>
    <string name="no_network_access">当前无网络连接，请检查网络</string>
    <string name="albums_creating">正在创建专辑......</string>
    <string name="albums_create_success">专辑创建成功</string>
    <string name="albums_create_fail">专辑创建失败</string>
    <string name="select_albums">选择专辑</string>
    <string name="please_login">请先登录</string>
    <string name="invalid_user">无效的用户</string>
    <string name="please_complete_profile">请先完成用户信息填写</string>
    <string name="restrict_upload_pictures">限制上传%1$张图片</string>
    <string name="works_upload_">作品发布成功</string>
    <string name="please_enter_description">请填写图片说明</string>
    <string name="please_select_picture">请选择作品图片</string>
    <string name="login_successed">登录成功</string>
    <string name="logining">正在登录......</string>
    <string name="login_failed">登录失败</string>
    <string name="remove_picture_confirm">确定要删除这张图片?</string>
    <string name="please_enter_correct_phone_or_email">请填写正确的手机号或者邮箱</string>
    <string name="password_cannot_be_empty">密码不能为空</string>
    <string name="pseudonym_cannot_be_empty">斋号/昵称不能为空</string>
    <string name="registering">正在注册</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="account_exist">用户已存在</string>
    <string name="logouting">正在注销...</string>
    <string name="profile_update_success">更新信息成功</string>
    <string name="profile_update_fail">更新信息失败</string>
    <string name="you_have_albums">共有%1$s张专辑</string>
    <string name="there_is_no_new_works">当前没有新作品发布</string>
    <string name="there_is_works">当前有%1$s个作品发布</string>
    <string name="save_nick_success">保存昵称成功</string>
    <string name="search_works">搜索作品</string>
    <string name="edit_picture">编辑图片</string>
    <string name="edit_picture_desc">添加图片说明。。。</string>
    <string name="see_all">查看所有</string>
    <string name="crash_toast">crash信息已经复制到剪切板</string>
    <string name="batch_picture_description">批量添加图片说明</string>
    <string name="please_add_picture">请添加图片</string>
    <string name="test">请添加图片</string>
    <string name="delete_album">删除专辑</string>


</resources>
