<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/corner_border_dialog"
            android:layout_marginLeft="@dimen/dialogfragment_marginleft"
            android:layout_marginRight="@dimen/dialogfragment_marginleft"
            >
        <TextView android:layout_width="match_parent"
                  android:layout_height="@dimen/dialogfragment_title_height"
                  android:text="@string/editgender"
                  android:gravity="center_vertical"
                  android:layout_marginLeft="16dp"
                  android:textStyle="bold"
                  android:textColor="@color/pure_black"
                  android:id="@+id/tv_phone" android:layout_weight="1" android:textSize="@dimen/text_size_normal"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_below="@+id/tv_phone"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:orientation="horizontal" android:layout_weight="1">
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:id="@+id/radioButton"
                    android:layout_weight="1" android:checked="true" android:textStyle="bold"
                    android:textSize="@dimen/text_size_normal"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:id="@+id/radioButton2"
                    android:layout_weight="1" android:textStyle="bold" android:textSize="@dimen/text_size_normal"/>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_weight="1"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="保存"
                android:textSize="@dimen/text_size_normal"
                android:gravity="center"
                android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>