<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:dandy="http://schemas.android.com/apk/res/com.pineapple.mobilecraft"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/layout_button"
            android:layout_centerHorizontal="true" android:visibility="gone">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/button_album" android:text="@string/album"
                android:textSize="@dimen/text_size_normal"
                style="@style/my_swtichbutton_style" android:layout_marginRight="5dp" android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/button_work" android:text="@string/work"
                android:textSize="@dimen/text_size_normal"
                android:layout_toRightOf="@id/button_album" style="@style/my_swtichbutton_style"
                android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:layout_marginTop="5dp"/>
    </RelativeLayout>

    <!--<android.support.v4.view.ViewPager-->
            <!--android:id="@+id/contentPager"-->
            <!--android:layout_below="@id/layout_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@android:color/transparent" />-->
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:id="@+id/layout_album"
            android:layout_below="@id/layout_button"
            android:layout_weight="1" android:padding="10dip" android:background="@color/edittext_bg_normal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:id="@+id/textView_all_albums" android:textSize="@dimen/text_size_normal"
                android:layout_alignParentEnd="true" android:textColor="@color/button_normal_red"
                android:layout_alignParentRight="true" android:clickable="true" android:layout_marginRight="10dip"/>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:id="@+id/container_albums"
                android:layout_below="@+id/textView_all_albums">

        </RelativeLayout>
        <view android:layout_width="match_parent"
              android:layout_height="wrap_content"
              class="com.pineapple.mobilecraft.widget.ExpandGridView" android:id="@+id/gridview_albums"
              android:layout_below="@+id/container_albums" android:numColumns="2"/>
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0dip" android:id="@+id/layout_works"
                    android:layout_below="@id/layout_button" android:layout_weight="1" android:padding="10dip"
                    android:background="@color/edittext_bg_normal" android:layout_marginTop="10dip">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:id="@+id/textView_all_works" android:textSize="@dimen/text_size_normal"
                android:layout_alignParentEnd="true" android:textColor="@color/button_normal_red"
                android:layout_alignParentRight="true" android:clickable="true" android:layout_marginRight="10dip"/>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:id="@+id/container_works"
                android:layout_below="@+id/textView_all_works">
        </RelativeLayout>
        <view android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              class="com.etsy.android.grid.StaggeredGridView" android:id="@+id/view3"/>
    </RelativeLayout>
        </LinearLayout>

</ScrollView>